Implement accepting mails

--- a/popup/mmm.html
+++ b/popup/mmm.html
@@ -24,7 +24,7 @@
 	    </select>
 	    <button id="mmm-list-perform-action" class="fw blue">Perform selected action!</button>
 	</div>
-	<div class="fw">
+	<div class="clearfix">
 	    <button id="mmm-import" class="hw yellow">Import</button>
 	    <button id="mmm-export" class="hw green">Export</button>
 	</div>
