--- a/html/popup.html
+++ b/html/popup.html
@@ -2,13 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="mmm.css">
+    <link rel="stylesheet" href="/html/popup.css">
     <script
 	src="https://code.jquery.com/jquery-3.2.1.js"
 	integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 	crossorigin="anonymous">
     </script>
-    <script src="mmm.js"></script>
+    <script src="/js/lists.js"></script>
+    <script src="/js/network.js"></script>
+    <script src="/js/popup.js"></script>
 </head>
 <body>
     <div id="main">
