Fix background task, prettify status box, add agpl

--- a/html/popup.html
+++ b/html/popup.html
@@ -60,6 +60,11 @@
 	<button class="fw red"    data-mailaction="reject">Reject</button>
 	<button class="fw yellow" data-mailaction="discard">Discard</button>
     </div>
+    <p id="credits">
+	&copy; 2017 Maximilian Wende<br>
+	<a href="https://github.com/dasisdormax/mailmanmod-webextension">mailmanmod WebExtension</a>
+	is licensed under the <a href="/agpl-3.0.txt">GNU AGPLv3</a> or later
+    </p>
     <div id="result" class="hidden"></div>
     <input id="import-file" type="file" class="hidden">
     <p id="status">Loading ...</p>
