Add build script, improve error handling

--- a/html/popup.html
+++ b/html/popup.html
@@ -8,7 +8,7 @@
 	integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 	crossorigin="anonymous">
     </script>
-    <script src="/js/downloadjs/download.min.js"></script>
+    <script src="/extern/downloadjs/download.min.js"></script>
     <script src="/js/lists.js"></script>
     <script src="/js/network.js"></script>
     <script src="/js/popup.js"></script>
@@ -62,8 +62,9 @@
     </div>
     <p id="credits">
 	&copy; 2017 Maximilian Wende<br>
-	<a href="https://github.com/dasisdormax/mailmanmod-webextension">mailmanmod WebExtension</a>
-	is licensed under the <a href="/agpl-3.0.txt">GNU AGPLv3</a> or later
+	<a href="https://github.com/dasisdormax/mailmanmod-webextension">Mailmanmod WebExtension</a>
+	is licensed under the <a href="/agpl-3.0.txt">GNU AGPLv3</a> or later<br>
+	Used libraries: <a href="https://jquery.com">jQuery</a>, <a href="http://danml.com/download.html">download.js</a>
     </p>
     <div id="result" class="hidden"></div>
     <input id="import-file" type="file" class="hidden">
