--- a/html/background.html
+++ b/html/background.html
@@ -2,11 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script
-	src="https://code.jquery.com/jquery-3.2.1.js"
-	integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-	crossorigin="anonymous">
-    </script>
+    <script src="/extern/jquery/jquery-3.2.1.min.js"></script>
     <script src="/js/lists.js"></script>
     <script src="/js/network.js"></script>
     <script src="/js/background.js"></script>
