Add screenshot, add more documentation

--- a/html/popup.html
+++ b/html/popup.html
@@ -33,7 +33,7 @@
 	    <input type="hidden" id="edit-id" value="">
 	    <label for="name">List Name</label>
 	    <input type="text" class="fw" id="edit-name" value="">
-	    <label for="baseurl">Base URL</label>
+	    <label for="baseurl" title="The link to the mailman web interface, WITHOUT additional parts such as &#39;/admindb/&lt;listname&gt;&#39;">Base URL [?]</label>
 	    <input type="text" class="fw" id="edit-baseurl" value="">
 	    <label for="password">List password</label>
 	    <input type="text" class="fw" id="edit-password" value="">
