Implement i18n with english and german translations

--- a/html/options.html
+++ b/html/options.html
@@ -12,8 +12,8 @@
     <input id="import-file" type="file" class="hidden">
     <p id="status" class="hidden"></p>
     <div>
-	<button id="import">Import</button>
-	<button id="export">Export</button>
+	<button id="import">__MSG_buttonImport__</button>
+	<button id="export">__MSG_buttonExport__</button>
     </div>
     <p id="credits">
 	&copy; 2017 Maximilian Wende<br>
