Localization fixes, normalize font size and background color

--- a/html/popup.html
+++ b/html/popup.html
@@ -44,7 +44,9 @@
 	<h3><span>__MSG_headingDetails__</span></h3>
 	<button class="fw grey" data-cancel>__MSG_buttonCancel__</button>
 	<p id="summary"></p>
+	<h4>__MSG_mailHeaders__</h4>
 	<p id="headers"></p>
+	<h4>__MSG_mailContent__</h4>
 	<p id="fulltext"></p>
 	<input type="hidden" id="mail-listid"    value="">
 	<input type="hidden" id="mail-msgid"     value="">
