--- a/html/background.html
+++ b/html/background.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <script src="/extern/jquery/jquery-3.2.1.min.js"></script>
-    <script src="/js/lists.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/storage.js"></script>
     <script src="/js/network.js"></script>
     <script src="/js/background.js"></script>
 </head>
