Revert 'release' branch to version 0.4.5
This reverts commit 89dc3ca79299bf6020810841a3565946ee0ba203.

--- a/html/options.html
+++ b/html/options.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <script src="/extern/jquery/jquery-3.2.1.min.js"></script>
     <script src="/extern/downloadjs/download.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/storage.js"></script>
+    <script src="/js/lists.js"></script>
     <script src="/js/options.js"></script>
     <link rel="stylesheet" href="/css/options.css">
 </head>
@@ -15,12 +14,6 @@
     <div>
 	<button id="import">__MSG_buttonImport__</button>
 	<button id="export">__MSG_buttonExport__</button>
-    </div>
-    <div>
-	<label><input id="useSync" type="checkbox">__MSG_settingUseSync__</label>
-    </div>
-    <div>
-	<button id="clearSync" title="__MSG_clearSyncTitle__">__MSG_clearSync__</button>
     </div>
     <p id="credits">
 	&copy; 2017 Maximilian Wende<br>
