Improve list deletion, implement full clear

--- a/html/options.html
+++ b/html/options.html
@@ -20,7 +20,10 @@
 	<label><input id="useSync" type="checkbox">__MSG_settingUseSync__</label>
     </div>
     <div>
-	<button id="clearSync" title="__MSG_clearSyncTitle__">__MSG_clearSync__</button>
+	<button id="clearLists">__MSG_buttonClearLists__</button>
+    </div>
+    <div>
+	<button id="clearListsConfirm" class="hidden">__MSG_buttonClearListsConfirm__</button>
     </div>
     <p id="credits">
 	&copy; 2017 Maximilian Wende<br>
