Enable new sync, bugfixes & UX improvements
Improvements include moving lists to the correct position
after renaming, seeing the list name in the editing panel,
and storing the scroll position in the main panel.

--- a/html/popup.html
+++ b/html/popup.html
@@ -28,11 +28,11 @@
 	</div>
     </div>
     <div id="edit" class="roundrect hidden">
-	<h3><span>__MSG_headingEdit__</span></h3>
+	<h3><span></span></h3>
 	<button class="fw grey" data-cancel>__MSG_buttonCancel__</button>
 	<form>
 	    <input type="hidden" id="edit-id" value="">
-	    <label for="name">__MSG_listLabelName__</label>
+	    <label for="name" title="__MSG_listHelpName__">__MSG_listLabelName__</label>
 	    <input type="text" class="fw" id="edit-name" value="">
 	    <label for="baseurl" title="__MSG_listHelpBaseurl__">__MSG_listLabelBaseurl__</label>
 	    <input type="url" class="fw" id="edit-baseurl" value="">
