--- a/html/popup.html
+++ b/html/popup.html
@@ -30,7 +30,7 @@
     <div id="edit" class="roundrect hidden">
 	<h3><span></span></h3>
 	<button class="fw grey" data-cancel>__MSG_buttonCancel__</button>
-	<form>
+	<form spellcheck="false">
 	    <input type="hidden" id="edit-id" value="">
 	    <label for="name" title="__MSG_listHelpName__">__MSG_listLabelName__</label>
 	    <input type="text" class="fw" id="edit-name" value="">
