Hide mail headers by default and add toggle button

--- a/html/popup.html
+++ b/html/popup.html
@@ -49,13 +49,14 @@
 	<h3>__MSG_headingDetails__</h3>
 	<button class="fw grey" data-cancel>__MSG_buttonCancel__</button>
 	<p id="summary"></p>
-	<div id="mail">
+	<button class="fw grey" id="mmm-header-toggle"></button>
+	<div id="headers" class="hidden"><h3>__MSG_mailHeaders__</h3>
+	    <p></p>
 	    <hr>
-	    <h3>__MSG_mailHeaders__</h3>
-	    <p id="headers"></p>
-	    <hr>
+	</div>
+	<div id="fulltext">
 	    <h3>__MSG_mailContent__</h3>
-	    <p id="fulltext"></p>
+	    <p></p>
 	</div>
 	<input type="hidden" id="mail-listid"    value="">
 	<input type="hidden" id="mail-msgid"     value="">
