Add action to open moderation overview, miscellaneous fixes
The extension will now show a useful message and retry when the
internet connection is temporarily unavailable. Also, update
jQuery to version 3.4.1.

--- a/html/popup.html
+++ b/html/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/popup.css">
-    <script src="/extern/jquery/jquery-3.2.1.min.js"></script>
+    <script src="/extern/jquery/jquery-3.4.1.min.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/storage.js"></script>
     <script src="/js/network.js"></script>
@@ -20,6 +20,7 @@
 		<select id="mmm-select-action" class="grey">
 		    <option value="" selected>__MSG_actionSelect__</option>
 		    <option value="refresh">__MSG_actionRefreshAll__</option>
+		    <option value="open">__MSG_actionOpen__</option>
 		    <option value="new">__MSG_actionNew__</option>
 		    <option value="edit">__MSG_actionEdit__</option>
 		    <option value="delete">__MSG_actionDelete__</option>
