--- a/html/popup.html
+++ b/html/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/popup.css">
     <script src="/extern/jquery/jquery-3.4.1.min.js"></script>
     <script src="/js/common.js"></script>
